<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpinachUncle</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="key_word">Key Word</string>
    <string name="date_calc">Date Calc</string>

    <string name="task_name">Task Name</string>
    <string name="browse">Browse</string>

    <string name="input_url">Input URL</string>
    <string name="keyword_before">Input keywords before target</string>
    <string name="keyword_starts_with">Input keywords starts with target</string>
    <string name="keyword_ends_with">Input keywords ends with target</string>
    <string name="keyword_after">Input keywords after target</string>


    <string name="exit">Exit</string>
    <string name="apply">Apply</string>
    <string name="close">Close</string>
    <string name="schedule_time">Schedule Time</string>
    <string name="auto_open_wifi">Auto open wifi</string>
    <string name="wifo_only">Wifi only</string>
    <string name="schedule_enable">Schedule Enable</string>
    <string name="schedule_off">Schedule off</string>
    <string name="schedule_on">Schedule on</string>
    <string name="max_keep">Max keep</string>
    <string name="logo">Logo</string>
    <string name="image">Image</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="next_schedule_time">Next schedule time:</string>
    <string name="download">Download</string>
    <string name="open">Open</string>
    <string name="setting">Setting</string>
    <string name="no_internet_conn">No internet connection</string>
    <string name="start_download">Start Downloading</string>
    <string name="download_start">Download Start</string>
    <string name="downloading">Downloading</string>
    <string name="download_succ">Download Successfully</string>
    <string name="download_finished">Download finished</string>
    <string name="download_fail">Download Faild</string>
    <string name="no_pictures_found">No pictures found</string>
    <string name="no_audio_found">No audio found</string>

    <string-array name="max_keep_array">
        <item>10</item>
        <item>20</item>
        <item>50</item>
        <item>100</item>
        <item>All</item>
    </string-array>

    <string name="about_version">Version: 0.1 beta</string>
    <string name="title_activity_task_keyword">TaskKeywordActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_task_date_calc">TaskDateCalcActivity</string>

</resources>