<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <EditText
        android:id="@+id/task_keyword_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_name" />

    <TextView
        android:id="@+id/task_keyword_save_path_tv"
        android:layout_width="100dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/task_keyword_browse_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/browse" />

    <EditText
        android:id="@+id/task_keyword_url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_url" />

    <EditText
        android:id="@+id/task_keyword_before"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/keyword_before" />

    <EditText
        android:id="@+id/task_keyword_starts_with"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/keyword_starts_with" />

    <EditText
        android:id="@+id/task_keyword_ends_with"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/keyword_ends_with" />

    <EditText
        android:id="@+id/task_keyword_after"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/keyword_after" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/task_keyword_add_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/add" />

    </LinearLayout>

</LinearLayout>