<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <EditText
        android:id="@+id/task_date_calc_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_name" />

    <TextView
        android:id="@+id/task_date_calc_save_path_tv"
        android:layout_width="100dp"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/task_date_calc_browse_btn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/browse" />


    <EditText
        android:id="@+id/task_date_calc_url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_url" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="bottom">

        <Button
            android:id="@+id/task_date_calc_save_btn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/save" />

    </LinearLayout>

</LinearLayout>