<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#ffffff">

    <TextView
        android:id="@+id/main_setting_schedule_date_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dip"
        android:layout_marginRight="20dip"
        android:gravity="left"
        android:text="@string/schedule_time"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TimePicker
            android:id="@+id/main_setting_schedule_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stretchColumns="1" >

        <TableRow>

            <TextView
                android:id="@+id/main_setting_auto_wifi_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:text="@string/auto_open_wifi"/>

            <ToggleButton
                android:id="@+id/main_setting_auto_wifi_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:textOff="Auto wifi off"
                android:textOn="Auto wifi on" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/main_setting_wifi_only_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:text="@string/wifo_only"/>

            <ToggleButton
                android:id="@+id/main_setting_wifi_only_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:textOff="Wifi only off"
                android:textOn="Wifi only on" />
        </TableRow>
    </TableLayout>

</LinearLayout>